# rray

./: Cargo.toml  README.md  sample.parquet
examples/: common.rs  group_apply.rs  parquet.rs  rayon.rs  typed_trait.rs
src/: lib.rs
src/dynamic/: dynamic.rs  mod.rs  types.rs
src/pandas/: builder.rs  columns.rs  dataframe.rs  dtypes.rs  groupby.rs  index.rs  mod.rs  prod.rs  series.rs  utils.rs
src/parquet/: dynamic_type.rs  file.rs  format.rs  mod.rs  utils.rs
tests/: groupby.rs  pandas.rs  rubbish.md  tests.rs  util.rs
tests/files/: df.csv  pandas.md
