[package]
name = "rray"
version = "0.1.0"
authors = ["lipeng <lipeng.sh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.0"
time = "0.2.9"
csv = "1.1.3"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.9.0"
arrow = "0.16.0"
hashbrown = "0.7.1"
ahash = "0.3.2"
rayon = "1.3.0"
rand = "0.7.3"